Added default dashboardcontroller

--- a/FreahVotes/src/main/resources/templates/index.html
+++ b/FreahVotes/src/main/resources/templates/index.html
@@ -2,7 +2,7 @@
 <head>
 <title>FreshVotes HomePage</title>
 <body>
-<h1>Welcome to Alans FreshVotes</h1>
+<h1>Welcome to FreshVotes</h1>
 </body>
 
 </head>
