Added login handling using encoding. Also added redirect on successful login

--- a/FreahVotes/src/main/resources/templates/index.html
+++ b/FreahVotes/src/main/resources/templates/index.html
@@ -3,6 +3,8 @@
 <title>FreshVotes HomePage</title>
 <body>
 <h1>Welcome to FreshVotes</h1>
+
+<a href="/login">Please login to proceed</a>
 </body>
 
 </head>
