--- a/FreahVotes/src/main/resources/templates/login.html
+++ b/FreahVotes/src/main/resources/templates/login.html
@@ -4,7 +4,7 @@
 <Title>FreshVotes Login Page</Title>
 </head>
 <body>
-<form action="${loginProcessingUrl}" method="post">
+<form action="/login" method="POST">
     <fieldset>
         <legend>Please Login</legend>
         <!-- use param.error assuming FormLoginConfigurer#failureUrl contains the query parameter error -->
