--- a/FreahVotes/src/main/resources/templates/homepage.html
+++ b/FreahVotes/src/main/resources/templates/homepage.html
@@ -6,7 +6,7 @@
 <body>
 <h1>Welcome to FreshVotes HomePage</h1>
 
-<form action="/logout" method="post">
+<form action="./logout" method="post">
 <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
 <button type="submit" >logout</button>
 </form>
