--- a/FreahVotes/src/main/resources/templates/index.html
+++ b/FreahVotes/src/main/resources/templates/index.html
@@ -4,7 +4,7 @@
 <body>
 <h1>Welcome to FreshVotes</h1>
 
-<a href="/login">Please login to proceed</a>
+<a href="./login">Please login to proceed</a>
 </body>
 
 </head>
