--- a/FreahVotes/src/main/resources/templates/login.html
+++ b/FreahVotes/src/main/resources/templates/login.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://thymeleaf.org">
 <head>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 <Title>FreshVotes Login Page</Title>
 <script
   src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
@@ -16,39 +17,53 @@
   </script>
 </head>
 <body>
-<form action="./login" method="POST">
-<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
-    <fieldset>
-        <legend>Please Login</legend>
-        <!-- use param.error assuming FormLoginConfigurer#failureUrl contains the query parameter error -->
-        <div th:if="${param.error != null}">
-            
-                Failed to login.
-                <div th:if="${SPRING_SECURITY_LAST_EXCEPTION != null}">
-                  Reason: <span th:text="${SPRING_SECURITY_LAST_EXCEPTION.message}"></span>
-                </div>
-            
-        </div>
-        <!-- the configured LogoutConfigurer#logoutSuccessUrl is /login?logout and contains the query param logout -->
-        <div th:if="${param.logout != null}">
-            <div>
-                You have been logged out.
-            </div>
-        </div>
-        <p>
-        <label for="username">Username</label>
-        <input type="text" id="username" name="username"/>
-        </p>
-        <p>
-        <label for="password">Password</label>
-        <input type="password" id="password" name="password"/>
-        </p>
-        <div>
-            <button type="submit" class="btn">Log in</button>
-            <button type="button" id="createaccount" class="btn">Create Account</button>
-        </div>
-    </fieldset>
- </form>
+<div class="container">
+	<div class="card"  style="margin-top: 1.56em;">
+		<div class="card-header"><h2>Please Login</h2></div>
+			<div class="card-body">
+							<form action="./login" method="POST">
+								<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+						        <!-- use param.error assuming FormLoginConfigurer#failureUrl contains the query parameter error -->
+						        <div th:if="${param.error != null}">
+						            
+						               <div class="alert alert-danger" role="alert">Failed to login</div>
+						                <div th:if="${SPRING_SECURITY_LAST_EXCEPTION != null}">
+						                  Reason: <span th:text="${SPRING_SECURITY_LAST_EXCEPTION.message}"></span>
+						                </div>
+						            
+						        </div>
+						        <!-- the configured LogoutConfigurer#logoutSuccessUrl is /login?logout and contains the query param logout -->
+						        <div th:if="${param.logout != null}">
+						            <div>
+						                You have been logged out.
+						            </div>
+						        </div>
+						        <div class="form-group row">
+						        	<label for="username" class="col-12 col-lg-2 col-form-label">Username</label>
+						        <div class="col-12 col-lg-10"> 
+						        	<input type="text"id="username" class="form-control" name="username"/>
+						        </div>
+						       	</div>
+					        
+						        <div class="form-group row">
+						        	<label for="password" class="col-12 col-lg-2 col-form-label">Password</label>
+						        <div class="col-12 col-lg-10"> 
+						        	<input type="password" id="password" class="form-control" name="password"/>
+						        </div>
+						        </div>
+						        <div class="row">
+						        	<div class="col-6">
+						            	<button type="submit" class="btn btn-primary">Log in</button>
+						        	</div>
+						        	<div class="col-6"> 
+						            <button type="button" id="createaccount" class="btn btn-secondary float-right">Create Account</button>
+						        	</div>
+					        	</div>
+				        	</div>
+					</form>
+		</div>
+	</div>
+</div>
 
 
 
