--- a/FreahVotes/src/main/resources/templates/register.html
+++ b/FreahVotes/src/main/resources/templates/register.html
@@ -1,18 +1,69 @@
 <!DOCTYPE html>
 <html xmlns:th="http://thymeleaf.org">
 <head>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+<script
+  src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+  integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8="
+  crossorigin="anonymous"></script>
+  <!--  Used to redirect to login when back button is called -->
+    <script type="text/javascript">
+  $(function () {
+	  $("#back").click(function () {
+		  window.location.href = "login";
+	  });
+	  
+  });
+  </script>
 <title>FreshVotes Register</title>
 </head>
 <body>
-<h2>Register For an Account</h2>
+<!--  This is all bootstrap to make the form responsive. Note the row column approach -->
+<div class="container">
+	<div class="card"  style="margin-top: 1.56em;">
+		<div class="card-header"><h2>Register for an Account</h2></div>
+			<div class="card-body">
+					<form action="" method="POST">
+						<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+						<div class="form-group row">
+						<!--  the lg is for large screen, there are others the total columns used for the row schould be 12
+						so for a large screen it will use a column size of 2 for the label and 10 for the input
+						the col-12 become some type of default when not in large screen mode (lg) and it works out how to arrange things
+						so it will place the label above the input on a realy small screen.
+						-->
+						<label for="name" class="col-12 col-lg-2 col-form-label">Name:</label>
+						<div class="col-12 col-lg-10"> 
+						<input type="text" class="form-control" th:field="${user.name}"/>
+						</div>
+						</div>
+						
+						<div class="form-group row">
+						<label for="username" class="col-12 col-lg-2 col-form-label">Email Address:</label> 
+						<div class="col-12 col-lg-10">
+						<input type="text" class="form-control" th:field="${user.username}"/>
+						</div>
+						</div>
+						
+						<div class="form-group row">
+						<label for="password" class="col-12 col-lg-2 col-form-label">Password:</label> 
+						<div class="col-12 col-lg-10"> 
+						<input type="password" class="form-control" th:field="${user.password}"/>
+						</div>
+						</div>
+						<div class="form-group row">
+						<label for="confirmPassword" class="col-12 col-lg-2 col-form-label">ConfirmPassword:</label>
+						<div class="col-12 col-lg-10">
+						<input type="password" class="form-control" id="confirmPassword"/>
+						</div>
+						</div>
+						
+						<button type="submit" class="btn btn-secondary btn-lg" id="back">Back</button>
+						<button type="submit" class="btn btn-primary float-right btn-lg">Create Account</button>
+					</form>
+		</div>
+	</div>
+</div>
 
-<form action="" method="POST">
-<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
-Name: <input type="text" th:field="${user.name}"/><br/>
-Email Address: <input type="text" th:field="${user.username}"/><br/>
-Password: <input type="password" th:field="${user.password}"/><br/>
-Confirm Password <input type="password"/><br/>
-<button type="submit">Create Account</button>
-</form>
+
 </body>
 </html>
