--- a/FreahVotes/src/main/resources/templates/product.html
+++ b/FreahVotes/src/main/resources/templates/product.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html xmlns:th="http://thymeleaf.org">
 <head>
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-<script
-  src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-  integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8="
-  crossorigin="anonymous"></script>
+<!-- the following can use any valid tag, it does not have to be script -->
+<script th:replace="fragments/header :: headerElement">
+// This stuff will be replaced by our fragment
+</script>
+
 <title>Products</title>
 <body>
+
 <!--  So do not render this div if the product is null. not sure its needed -->
 	<div class="container" th:if="${product != null}">
+	<div th:replace="fragments/header :: navbar"></div>
 		<h1>Product</h1>
 		
 		<form action="" method="POST">
