--- a/FreahVotes/src/main/resources/templates/index.html
+++ b/FreahVotes/src/main/resources/templates/index.html
@@ -1,10 +1,29 @@
 <html>
 <head>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+<script th:replace="fragments/header :: headerElement">
+// This stuff will be replaced by our fragment
+</script>
 <title>FreshVotes HomePage</title>
 <body>
-<h1>Welcome to FreshVotes</h1>
-
-<a href="./login">Please login to proceed</a>
+<div class="container" style="margin-top: 1.56em;"> 
+<div th:replace="fragments/header :: navbar"></div>
+	<div class="row">
+		<div class="col-8">
+			<h1>Welcome to FreshVotes</h1>
+		</div>
+<!-- 		<div class="col-4"> -->
+<!-- 			<button type="button" class="btn btn-primary float-right" id="login">Login</button> -->
+<!-- 		</div> -->
+	</div>
+</div>
+<!--  here we use basic javascript instead of jquery. take a look at youmightnotneedjquery.com -->
+<script type="text/javascript">
+var loginBtn = document.getElementById('login')
+loginBtn.addEventListener('click', function () {
+	window.location.href = "login"
+})
+  </script>
 </body>
 
 </head>
