--- a/FreahVotes/src/main/resources/templates/products.html
+++ b/FreahVotes/src/main/resources/templates/products.html
@@ -11,6 +11,7 @@
 <body>
 <!--  So do not render this div if the product is null. not sure its needed -->
 	<div class="container">
+	<div th:replace="fragments/header :: navbar"></div>
 		<h1>All of your Products</h1>
 		
 		<div th:each="product : ${products}">
