--- a/FreahVotes/src/main/resources/templates/fragments/header.html
+++ b/FreahVotes/src/main/resources/templates/fragments/header.html
@@ -14,6 +14,11 @@
 			</script>
   			<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 			<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+			 <script type="text/javascript">
+			$('button#cancel').on('click', function(){
+    		window.history.back();
+							});
+			</script>
 	</div>
 	
 	<div th:fragment="navbar" th:remove="tag">
@@ -25,7 +30,7 @@
 			  <div class="collapse navbar-collapse" id="navbarText">
 			  <ul sec:authorize="isAuthenticated()" class="navbar-nav mr-auto">
 			      <li class="nav-item">
-			        <a class="nav-link" href="/dashboard">DashBoard <span class="sr-only">(current)</span></a>
+			        <a class="nav-link" th:href="@{/dashboard}">Dashboard <span class="sr-only">(current)</span></a>
 			      </li>
 			     </ul>
 			    <div class="navbar-nav ml-auto">
@@ -40,7 +45,7 @@
 			     	</script>
 			    </div>
 			     <div sec:authorize="isAuthenticated()">
-				    <form action="/alansfreshvotes/logout" method="post" class="float-right">
+				    <form th:action="@{/logout}" method="post" class="float-right">
 						<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
 						<button type="submit" class="btn btn-primary btn-lg" >logout</button>
 					</form>
