--- a/FreahVotes/src/main/resources/templates/feature.html
+++ b/FreahVotes/src/main/resources/templates/feature.html
@@ -9,16 +9,17 @@
 </head>
 <body>
 
-<div class="container">
 <div th:replace="fragments/header :: navbar"></div>
+<div class="container">
+
 	<div class="card"  style="margin-top: 1.56em;">
 				<div class="card-header">
 						<div class="row" >
 							<div class="col-8">
-								<h2>New Feature</h2>
+								<h2>Feature</h2>
 							</div>
 							<div class="col-4">
-								<span style="font-size: 1.2em;"class="badge badge-secondary float-right">TEST</span>
+								<span style="font-size: 1.2em;"class="badge badge-secondary float-right" th:text="${feature.status}">TEST</span>
 							</div>
 						</div>
 		
@@ -35,23 +36,38 @@
 						the col-12 become some type of default when not in large screen mode (lg) and it works out how to arrange things
 						so it will place the label above the input on a realy small screen.
 						-->
-						<label for="title" class="col-12 col-lg-2 col-form-label">Title:</label>
+						<label for="title" class="col-12 col-lg-2 col-form-label" >Title:</label>
 						<div class="col-12 col-lg-10"> 
-						<input type="text" class="form-control" th:field="${feature.title}"/>
+						<input type="text" required class="form-control" th:field="${feature.title}" th:disabled="${user.id == feature.user.id ? 'false' : 'true'}"/>
 						</div>
 						</div>
 						
 						<div class="form-group row">
 						<label for="description" class="col-12 col-lg-2 col-form-label">Description:</label> 
 						<div class="col-12 col-lg-10">
-						<textarea class="form-control" th:field="${feature.description}"></textarea>
+						<textarea required  class="form-control" th:field="${feature.description}" th:disabled="${user.id == feature.user.id ? 'false' : 'true'}"></textarea>
 						</div>
 						</div>
 						
 		
 						<button id="cancel" class="btn btn-secondary btn-lg">Back</button>
-						<button type="submit" class="btn btn-primary float-right btn-lg">Submit Feature</button>
+						<span th:if="${user.id == feature.user.id}">
+						<button type="submit" class="btn btn-primary float-right btn-lg" th:disabled="${user.id == feature.user.id ? 'false' : 'true'}">Submit Feature</button>
+						</span>
 					</form>
+					
+				<div class="card"  style="margin-top: 1.56em;">
+								<div class="card-header">
+						<div class="row" >
+							<div class="col-8">
+								<h2>Comments</h2>
+							</div>
+						</div>
+		
+				</div>
+				
+				</div>
+					
 		</div>
 	</div>
 </div>
