added a reverse list to ensure latest message is at the top.

--- a/FreahVotes/src/main/resources/templates/feature.html
+++ b/FreahVotes/src/main/resources/templates/feature.html
@@ -85,7 +85,8 @@
 				</span>		
 			</form>
 			
-			<div class="card-body">
+<!--  new starts here -->
+				<div class="card-body">
 					<div th:each="nextcomment : ${comments}" style="margin: 1em 0em">
 					<div class="form-group row">
 						<div class="col-12 col-lg-10">
@@ -158,6 +159,7 @@
 						
 					
 		</div>
+<!-- new ends here -->
 	</div>
 </div>
 </div>
